--- a/Week4/css/style.css
+++ b/Week4/css/style.css
@@ -11,7 +11,7 @@ body,html {
 body {
 	display: grid;
 	grid-template-rows: 80px 1fr 50px;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 30% 70%;
 	grid-template-areas: 
 	"header header"
 	"sidebar content"
@@ -24,6 +24,7 @@ body {
 	background-color: #333;
 	color: white;
 	font-size: 2em;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .sidebar {
